fixtures/valid/static-dynamic-public-import/src/consumer/public.ts
export const consumerValue = import("../producer/public");
