fixtures/invalid/static-dynamic-private-import/src/consumer/public.ts
export const consumerValue = import("../producer/private");
